# RAG-Chatbot

./: .gitignore  README.md  pyproject.toml  testing.ipynb
src/: serve.py
