[tool.poetry]
name = "rag-chatbot"
version = "0.1.0"
description = "A basic RAG chatbot."
authors = ["IsmaelBena <ismael.benadjal@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.2.13"
langchain-community = "^0.2.7"
langchain-openai = "^0.1.15"
langserve = {extras = ["all"], version = "^0.2.2"}
docarray = "^0.40.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
